--- a/payments/cn/guides/changelog.mdx
+++ b/payments/cn/guides/changelog.mdx
@@ -21,7 +21,7 @@ lang: "zh-hans"
 | **资金管理** | (SDK v1.28.0) 新增[划转 API](/payments/cn/guides/allocate-funds) 操作，用于在不同账户之间灵活分配资金：<br/>&nbsp;&nbsp;- [Get available allocation amount](/payments/en/api-references/payment/get-available-allocation-amount)<br/>&nbsp;&nbsp;- [Create batch allocation](/payments/en/api-references/payment/create-batch-allocation)<br/>&nbsp;&nbsp;- [Get batch allocation information](/payments/en/api-references/payment/get-batch-allocation-information)<br/>&nbsp;&nbsp;- [List all batch allocations](/payments/en/api-references/payment/list-all-batch-allocations)<br/>&nbsp;&nbsp;- [List all allocation records](/payments/en/api-references/payment/list-all-allocation-records) | 2025-12-18 |
 | **收款** | (SDK v1.28.0) [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order) 和 [Create order link](/payments/en/api-references/payment/create-order-link) 字段简化：支持自定义应付金额，去除 `exchange_rate` 字段，并优化了部分字段命名，增强了可读性和易用性。金额字段的全局精度统一为 2 位小数，方便对账和资金管理。<br/><br/>[Create pay-in order](/payments/en/api-references/payment/create-pay-in-order)：<br/>&nbsp;&nbsp;- 新增字段：`pricing_currency`、`pricing_amount`、`payable_currency`、`payable_amount`。<br/>&nbsp;&nbsp;- 已废弃字段：`currency`、`order_amount`、`token_id`、`custom_exchange_rate`。<br/><br/>[Create order link](/payments/en/api-references/payment/create-order-link)：<br/>&nbsp;&nbsp;- 新增字段：`pricing_currency`、`pricing_amount`、`payable_currencies`、`payable_amounts`。<br/>&nbsp;&nbsp;- 已废弃字段：`currency`、`order_amount`、`token_ids`、`custom_exchange_rates`。 | 2025-12-18 |
 | **支付链接** | (SDK v1.28.0) 使用 [Create order link](/payments/en/api-references/payment/create-order-link) 创建订单支付链接时，新增 `return_url` 字段，现支持配置商户原购物页 URL。在用户支付成功或遇到异常时，可跳转回原购物页面，提升用户支付体验。 | 2025-12-18 |
-| **资金管理** | - 新增[划转](/payments/cn/guides/allocate-funds)功能，支持在不同账户之间手动分配资金。目前已支持通过 Payments App 操作，API 即将开放。<br/>- 新增[账户](/payments/cn/guides/amounts-and-balances#账户)概念。账户为系统账本下管理的虚拟资金主体。详见[账户与资金分配](/payments/cn/guides/amounts-and-balances)。<br/>- 简化了资金转出流程。转出时无需选择资金来源（收款或充值模式）或指定订单，只需直接填写金额，更加高效便捷。目前已支持通过 Payments App 操作，API 即将开放。详见[法币出金](/payments/cn/guides/fiat-payouts)和[加密货币转账](/payments/cn/guides/crypto-payouts)。 | 2025-12-12 |
+| **资金管理** | - 新增[划转](/payments/cn/guides/allocate-funds)功能，支持在不同账户之间手动分配资金。目前已支持通过 Payments App 操作，API 即将开放。<br/>- 新增[账户](/payments/cn/guides/amounts-and-balances#账户)概念。账户为系统账本下管理的虚拟资金主体。详见[账户与资金分配](/payments/cn/guides/amounts-and-balances)。<br/>- 简化了资金转出流程。转出时无需选择资金来源（收款或充值模式）或指定订单，只需直接填写金额，更加高效便捷。目前已支持通过 Payments App 操作，API 即将开放。详见[Off-Ramp 对接](/payments/cn/guides/fiat-payouts)和[加密货币转账](/payments/cn/guides/crypto-payouts)。 | 2025-12-12 |
 | **支付链接** | [订单支付链接](/payments/cn/guides/payment-link)全新改版：<br/>- 全新视觉与交互设计<br/>- 桌面端新增支持 Binance Wallet（EVM 及 Solana 链）<br/>- 支持扫描含金额的二维码，自动填充转账金额<br/>- 第三方钱包调用优化：调用流程简化、支持推荐前一次使用的钱包 | 2025-12-12 |
 | **交易对手方** | 新增[交易对手方](/payments/cn/guides/counterparties)功能，用于管理付款方信息。 目前已支持通过 Payments App 操作，API 即将开放。| 2025-12-03 |
 | **转出目的地** | 新增[转出目的地](/payments/cn/guides/destinations)功能，用于集中管理资金转出时的目的地信息。 目前已支持通过 Payments App 操作，API 即将开放。| 2025-12-03 |
