--- a/payments/cn/guides/destinations.mdx
+++ b/payments/cn/guides/destinations.mdx
@@ -4,9 +4,9 @@ lang: "zh-hans"
 ---
 
 
-**转出目的地**功能用于集中管理资金转出时的目的地信息，包括用于接收加密货币的钱包地址及用于法币出金的银行账户。
+**转出目的地**功能用于集中管理资金转出时的目的地信息，包括用于接收加密货币的钱包地址及用于 Off-Ramp 对接的银行账户。
 
-- 如需法币出金，您需录入与您公司主体名称一致的银行账户，并通过 Cobo 运营团队的审核，审核通过后方可用于出金操作。
+- 如需 Off-Ramp 对接，您需录入与您公司主体名称一致的银行账户，并通过 Cobo 运营团队的审核，审核通过后方可用于出金操作。
 
 - 进行加密货币转账时，您可通过**将转出目的地设为白名单**开关，灵活管理可转账的地址范围：
   - 若开启该开关，则仅允许转账至已录入的转出目的地（钱包地址）；
