--- a/payments/cn/guides/supported-chains-and-tokens.mdx
+++ b/payments/cn/guides/supported-chains-and-tokens.mdx
@@ -4,7 +4,7 @@ lang: "zh-hans"
 description: ""
 ---
 
-Cobo 支付解决方案目前支持两种主流稳定币：**USDC** 和 **USDT**，并可在多个主流公链上使用。本文档详细说明各币种和公链组合在收款和法币出金场景下的支持情况。
+Cobo 支付解决方案目前支持两种主流稳定币：**USDC** 和 **USDT**，并可在多个主流公链上使用。本文档详细说明各币种和公链组合在收款和 Off-Ramp 对接场景下的支持情况。
 
 ## 收款支持的币种和公链
 
@@ -33,9 +33,9 @@ Cobo 支付解决方案支持以下币种和公链组合进行收款：
 * 测试币水龙头：https://nileex.io/join/getJoinPage
 
 
-## 法币出金支持情况
+## Off-Ramp 对接支持情况
 
-以下表格列出了各币种和公链组合在不同环境中的法币出金支持情况：
+以下表格列出了各币种和公链组合在不同环境中的 Off-Ramp 对接支持情况：
 
 | 币种和公链 | 开发环境 | 生产环境 |
 |---------|----------|----------|
@@ -54,6 +54,6 @@ Cobo 支付解决方案支持以下币种和公链组合进行收款：
 | BSC_USDT | ✅ 支持（需跨链费用）| ✅ 支持（需跨链费用）|
 | TTRON_USDT | ✅ 支持 | ❌ 不支持 |
 
-<Info>标记为"需跨链费用"的币种和公链组合在进行法币出金时，除常规费用外，还需额外支付跨链费用。</Info>
+<Info>标记为"需跨链费用"的币种和公链组合在进行 Off-Ramp 对接时，除常规费用外，还需额外支付跨链费用。</Info>
 
 <Tip>欢迎您[提交反馈](https://forms.zohopublic.com/cobo/form/DocumentFeedbackForm/formperma/QvLOhxJv1_JMsJ-1dleZ8Itb_7rzN-LtgvsDdxosoVI)来帮助改进我们的文档！</Tip>
