--- a/payments/cn/guides/features.mdx
+++ b/payments/cn/guides/features.mdx
@@ -20,8 +20,8 @@ lang: "zh-hans"
     - [交易对手方管理](/payments/cn/guides/counterparties)：在使用充值模式进行收款时，您可以录入常用付款方的钱包地址。录入后，充值交易记录中将展示来源地址对应的付款方名称，帮助您及时了解资金来源方身份。
   - [订单模式收款](/payments/cn/guides/create-orders)：您可以创建带有指定金额和有效期的支付订单，付款方需要在规定时间内完成支付。支持取消订单、退款，以及处理多付、少付、晚付等异常情况。
     - [支付链接](/payments/cn/guides/payment-link)：在使用订单模式进行收款时，如果您希望节省自建支付页面的开发时间，可以直接使用 Cobo 提供的支付链接作为收款页面，或将其通过 iFrame 方式嵌入到您的网站或应用中。
-    - [退款链接](/payments/cn/guides/create-refund-link)：当终端用户因为各种原因需要退款时，您可以生成一个退款链接，让终端用户填写退款地址，并由 Cobo 自动完成退款流程。
   - [订阅模式收款](/payments/cn/guides/create-subscriptions)：通过智能合约等方式定期、自动扣款。
+- [退款链接](/payments/cn/guides/create-refund-link)：当终端用户因为各种原因需要退款时，您可以生成一个退款链接，让终端用户填写退款地址，并由 Cobo 自动完成退款流程。
 - [支持的链和代币](/payments/cn/guides/supported-chains-and-tokens)：Cobo 支付解决方案支持多种主流稳定币，如 USDC、USDT 等，并支持在多个主流公链上使用。
 
 ### 商户管理
@@ -30,19 +30,19 @@ lang: "zh-hans"
 ### 资金管理
 
 - 账户与资金分配：系统为您维护**开发者账户**和**商户账户**，用于记录和管理各方资金归属。付款完成后，系统会根据您配置的开发者费率自动将资金结算到相应账户；您也可以根据需要在账户之间手动划转资金。详情见[账户与资金分配](/payments/cn/guides/amounts-and-balances)和[划转资金](/payments/cn/guides/allocate-funds)。
-- 兑换和跨链：您可以使用 [Token Swap App](https://manuals.cobo.com/cn/apps/token-swap/introduction)，将一种加密货币兑换成另一种，或将其转移到不同的公链。
 - 理财/DeFi：如果您希望投资闲置资金以获取收益，可以使用 Cobo 的 [Earn App](https://manuals.cobo.com/cn/apps/earn/introduction) 购买稳健的理财产品，或将闲置资金投入到不同的 DeFi 协议中。
 
 ### 资金转出
 
-- [法币出金](/payments/cn/guides/fiat-payouts)：通过 OTC 供应商，将加密货币兑换成法币后转入您的银行账户。
+- [Off-Ramp 对接](/payments/cn/guides/fiat-payouts)：通过 OTC 供应商，将加密货币兑换成法币后转入您的银行账户。
 - [加密货币转账](/payments/cn/guides/crypto-payouts)：通过链上转账将加密货币转至外部钱包地址。
+- 自动跨链：在您发起 Off-Ramp 对接或加密货币转账时，支持自动跨链。例如，您可以同时转出 TRON 和 Ethereum 链上的 USDT 到某一 TRON 钱包地址，系统会自动将 Ethereum 链上的 USDT 跨链到 TRON 链上，并转出到目标钱包地址。
 - [转出目的地管理](/payments/cn/guides/destinations)：集中管理资金转出时的目的地信息，包括加密货币钱包地址和银行账户。支持将目的地列表设置为白名单，从而灵活控制可转账的地址范围，提升安全性与操作效率。
 
 
 ### 合规与风控
 
-您可以灵活选择使用 Cobo KYT 或 [Screening App](https://manuals.cobo.com/cn/apps/screening/introduction) 对收到的资金进行合规扫描，确保交易安全合规。
+您可以使用 [Screening App](https://manuals.cobo.com/cn/apps/screening/introduction) 对收到的资金进行合规扫描，确保交易安全合规。
 
 
 ## 开发者集成
