--- a/payments/cn/guides/quick-start.mdx
+++ b/payments/cn/guides/quick-start.mdx
@@ -90,7 +90,7 @@ lang: "cn"
 
   3. 接入收款功能：通过[充值模式](/payments/cn/guides/get-topup-addresses)进行收款
   
-     - 为每个玩家创建一个收款人（Payer）及其专属的充值地址
+     - 为每个玩家创建一个专属的充值地址
      - 玩家使用固定地址进行充值，系统自动将充值记录关联到对应收款人
      - 通过 Payments App 或 API 查询每个收款人的充值明细
 
