--- a/payments/en/guides/features.mdx
+++ b/payments/en/guides/features.mdx
@@ -7,6 +7,10 @@ lang: "en"
 
 This document introduces the core features of the Cobo payments solution.
 
+## Overview
+The following diagram shows the main functional modules and their relationships of the payments solution:
+
+<img src="/payments/en/images/payments/feature-overview.svg" className="diagram" alt="Cobo payments solution feature overview"></img>
 
 ## Core business features
 
